Bug 581192: Replace SWTObservables with WidgetProperties (#8)
* Bug 581192: Do not use SWTObservables


* Bug 581192: Do not use SWTObservables in DestinationsBox

* Bug 581192: Do not use SWTObservables in Workbench and Parameters
contexts

* Bug 580261: Do not use newest version when older is compatible

* Bug 580261: Fix compiler warnings

* Bug 581192: Fix compiler warnings and error in Preferences UI

* Bug 581192: Fix compiler errors in rcptt.ui

* Bug 581192: Fix compiler errors in verifications.text.ui

* Bug 581192: Fix compiler errors in runner

* Bug 581192: Fix compiler errors in verifications.resources.ui

* Bug 581192: Fix compiler errors in verifications.tree.ui

* Bug 581192: Fix compiler errors in verifications.time.ui

* Bug 581192: Fix compiler errors in Resources context

* Bug 581192: Fix compiler errors in verifications.log.ui

* Bug 581192: Fix-up dependency versions

* Bug 581192: Do not rely on order in Task View